--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,38 @@
     fill-opacity: 0%;
     stroke-opacity: 100%;
 }
+.leaflet-marker-icon{
+    color: bisque;
+}
+.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
 /* scale bar*/
 .leaflet-control-scale-line{fill-opacity: 10%;
 
 }
 /*--------Legend Elements-------*/
-.legend{display:inline-block;
+.controls{display:inline-block;
 
 }
 .sequence{
