--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,16 @@
     display: inline-block;
     position:relative;
     bottom:10%;
-    z-index:9
 }
 .leaflet-popup-content{
     display: inline-block;
+    font: 12px/14px Arial, Helvetica, sans-serif;
+    
     
 }
 .leaflet-popup-content-wrapper{
     font-weight: normal;
+    opacity: 0.98;
 }
 
 .leaflet-control-layers{
@@ -70,6 +72,9 @@
 }
 .dropdown{
     display:block;
+}
+.congestion{
+    font: 12px/14px Arial, Helvetica, sans-serif;
 }
 .time{
     display:block;
